// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog examples NovaConfirmationDialogComponent should render correctly 1`] = `
<div
  id="root0"
>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open confirmation dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-dialog-default"
    id="a-v-dialog-0"
    messagetype="information"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Information"
            class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            id="a-v__icon__internal-0"
            role="img"
            v-icon-visa-information-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
            />
            <path
              class="v-icon-primary"
              d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <span>
            Confirmation title 1
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          id="a-v__icon__internal-1"
          v-icon-visa-close-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M11.5 11.1113L21.6108 1.00049L23 2.38968L12.8892 12.5005L23 22.6113L21.6108 24.0005L11.5 13.8897L1.38919 24.0005L0 22.6113L10.1108 12.5005L0 2.38968L1.3892 1.00049L11.5 11.1113Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
  <dialog
    aria-describedby="custom-dialog-description"
    aria-labelledby="custom-dialog-title"
    aria-modal="true"
    class="v-dialog v-message v-message-warning"
    id="custom-dialog"
    messagetype="warning"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="custom-dialog-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Warning"
            class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
            focusable="false"
            height="24"
            id="a-v__icon__internal-2"
            role="img"
            v-icon-visa-warning-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M11.5 8.00195H13.5V15.002H11.5V8.00195ZM11.5 17.002H13.5V19.002H11.5V17.002Z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Confirmation title 2
          </span>
        </h2>
        <p
          id="custom-dialog-description"
          v-dialog-text=""
        >
          Are you sure you want to close all dialogs?
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Close all dialogs
          </button>
          <button
            buttoncolor="secondary"
            class="v-button v-button-secondary"
            type="button"
            v-button=""
          >
            Cancel
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-3"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaDefaultDialogComponent should render correctly 1`] = `
<div
  id="root1"
>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open default dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-dialog-default"
    id="a-v-dialog-0"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header"
          id="a-v-dialog-0-title"
          v-dialog-header=""
        >
          <span>
            Default title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
          <button
            buttoncolor="secondary"
            class="v-button v-button-secondary"
            type="button"
            v-button=""
          >
            Secondary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-4"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaErrorDialogComponent should render correctly 1`] = `
<div
  id="root2"
>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open error dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-message-error"
    id="a-v-dialog-0"
    messagetype="error"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Error"
            class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            id="a-v__icon__internal-5"
            role="img"
            v-icon-visa-error-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
              fill-rule="evenodd"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <span>
            Error title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-6"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaSuccessDialogComponent should render correctly 1`] = `
<div
  id="root3"
>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open success dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-message-success"
    id="a-v-dialog-0"
    messagetype="success"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Success"
            class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
            focusable="false"
            height="24"
            id="a-v__icon__internal-7"
            role="img"
            v-icon-visa-success-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
            />
            <path
              class="v-icon-primary"
              d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <span>
            Success title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-8"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaTouringTipsDialogComponent should render correctly 1`] = `
<div
  id="root4"
>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open touring tips dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-dialog-default"
    id="a-v-dialog-0"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <h2>
            Touring tips title
          </h2>
        </h2>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-pb-8"
          valignitemscenter=""
          vflex=""
          vflexrow=""
          vgap="8"
          vpb="8"
        >
          <div
            class="v-align-items-center v-flex v-flex-row v-justify-content-center v-typography-subtitle-2"
            style="background-color: var(--palette-default-surface-highlight); block-size: 36px; inline-size: 36px; border-radius: var(--size-rounded-pill);"
            valignitemscenter=""
            vflex=""
            vjustifycontentcenter=""
            vtypography="subtitle-2"
          >
             2 
          </div>
          <p
            class="v-typography-body-2-bold"
            id="a-v-dialog-0-description"
            v-dialog-text=""
            vtypography="body-2-bold"
          >
            Touring tips instructions
          </p>
        </div>
        <p
          class="v-typography-body-2"
          vtypography="body-2"
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-between v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentbetween=""
          vpt="16"
        >
          <p>
            2 of 4
          </p>
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-end v-pt-16"
            valignitemscenter=""
            vflex=""
            vflexwrap=""
            vgap="8"
            vjustifycontentend=""
            vpt="16"
          >
            <button
              buttoncolor="secondary"
              class="v-button v-button-secondary"
              type="button"
              v-button=""
            >
              Previous
            </button>
            <button
              autofocus=""
              buttoncolor="primary"
              class="v-button"
              type="button"
              v-button=""
            >
              Next
            </button>
          </div>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-9"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaWarningDialogComponent should render correctly 1`] = `
<div
  id="root5"
>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open warning dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-message-warning"
    id="a-v-dialog-0"
    messagetype="warning"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Warning"
            class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
            focusable="false"
            height="24"
            id="a-v__icon__internal-10"
            role="img"
            v-icon-visa-warning-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M11.5 8.00195H13.5V15.002H11.5V8.00195ZM11.5 17.002H13.5V19.002H11.5V17.002Z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Warning title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-11"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaWithoutCloseButtonDialogComponent should render correctly 1`] = `
<div
  id="root6"
>
  <button
    class="v-button"
    type="button"
    v-button=""
  >
    Open dialog without close icon
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-message-error"
    id="a-v-dialog-0"
    messagetype="error"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Error"
            class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            id="a-v__icon__internal-12"
            role="img"
            v-icon-visa-error-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
              fill-rule="evenodd"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <span>
            Error title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;
